lib/brevity/parsing/dynamic_change.treetop
module Brevity

grammar DynamicChange
  include DynamicLevel
  
  rule dynamic_change
    grad_change / immed_change
  end
  
  rule grad_change
    ("<" / ">") [\s]* dl:dynamic_level <GradualDynamicChangeNode>
  end
    
  rule immed_change
    dl:dynamic_level <ImmediateDynamicChangeNode>
  end
end

end
